--- a/405 assignment 2/Code/index.html
+++ b/405 assignment 2/Code/index.html
@@ -9,7 +9,7 @@
   <body text="blue" >
     <div style ='padding-left:350px'>
 <h1>  Data Visualisation </h1>
-<p>  <a>Earthquake data which is updated every 5mins from a source!</a></p>
+<p>  <a>Earthquake data which is loaded from a data source!</a></p>
 </div>
 </body>
 </html>
